# HMX-Server

./: README.md
Source/: CMakeLists.txt  Makefile.in
Source/Client/: CMakeLists.txt  ClientCommand.cpp  ClientCommand.h  Client_PCH.h  GameService.cpp  GameService.h  Makefile  NetMsgHandler.cpp  NetMsgHandler.h  NetService.cpp  Player.cpp  Player.h  PlayerMgr.cpp  PlayerMgr.h  PlayerProcHandler.cpp  PlayerProcHandler.h  c_cfg.xml
Source/Common/: AttributeOffsetC.h  BaseDefine.h  CMakeLists.txt  CommFun.h  CommonDef.h  ConfigBase.h  DBConnection.cpp  DBConnection.h  DBHelper.cpp  FogsMessageBuffer.hpp  FogsProtocol.hpp  FogsTcpConnection.cpp  FogsTcpConnection.hpp  FogsTimerService.cpp  FogsTimerService.hpp  Makefile  Makefile.in  MysqlProtobufHelper.cpp  MysqlProtobufHelper.h  ProtobufUtils.cpp  ProtobufUtils.hpp  Single.h  SrvEngine.cpp  SrvEngine.h  SrvIncludes.h  csCommon.h  def_buff.h  def_resource.h  zEncrypt.cpp  zLogger.cpp  zMisc.cpp  zMsgHandler.cpp  zNetSerivce.cpp  zServerRegMgr.cpp  zService.cpp  zSessionMgr.cpp  zSrvSerivceMgr.cpp  zTaskTimer.cpp  zTextCVS.cpp  zTimeTick.cpp  (+2 more)
Source/Conf/: hutype.xml  notice.xml  serivces.xml
Source/DBServer/: CCacheMail.cpp  CCacheMail.hpp  CCacheMailMgr.cpp  CCacheMailMgr.hpp  CMakeLists.txt  CZhanJiRecord.cpp  CZhanJiRecord.hpp  CZhanJiRecordMgr.cpp  CZhanJiRecordMgr.hpp  ClientCommand.cpp  ClientCommand.h  Collection.cpp  Collection.h  DBServer.cfg.dist  DBServer_PCH.cpp  DBServer_PCH.h  GameService.cpp  GameService.h  MCharacter.cpp  MCharacter.h  Makefile  Memory.cpp  Memory.h  NetMsgHandler.cpp  NetMsgHandler.h  NetService.cpp  ProcSsHandler.cpp  ProcSsHandler.h  ProcWorldHandler.cpp  ProcWorldHandler.h  RsyncTools.cpp  RsyncTools.h  SequenceManager.cpp  SequenceManager.h
Source/GameServer/: Base.h  CHuScore.cpp  CHuScore.h  CMaJiang.cpp  CMaJiang.hpp  CMail.cpp  CMail.hpp  CMailMgr.cpp  CMailMgr.hpp  CMajingRule.cpp  CMajingRule.hpp  CMajingRuleBB.cpp  CMajingRuleBB.hpp  CMajingRuleLC.cpp  CMajingRuleLC.hpp  CMajingRuleXL.cpp  CMajingRuleXL.hpp  CMajingRuleXZ.cpp  CMajingRuleXZ.hpp  CMajingRuleYL.cpp  CMajingRuleYL.hpp  CMakeLists.txt  CMatchManager.cpp  CMatchManager.hpp  CMatchTemplate.hpp  CNotice.cpp  CNotice.hpp  CNoticeMgr.cpp  CNoticeMgr.hpp  COnlineRecord.cpp  COnlineRecord.h  CPlayer.cpp  CPlayer.hpp  CRoom.cpp  CRoom.hpp  CRoomMgr.cpp  CRoomMgr.hpp  CWorld.cpp  CWorld.hpp  Chat.cpp  (+71 more)
Source/GatewayServer/: CMakeLists.txt  CMsgConn.cpp  CMsgConn.hpp  CRobot.cpp  CRobot.hpp  CRobotMgr.cpp  CRobotMgr.hpp  GameService.cpp  GameService.h  GateChat.cpp  GateScene.cpp  GateScene.h  GateUser.cpp  GateUser.h  GatewayServer.cfg.dist  GatewayServer_PCH.cpp  GatewayServer_PCH.h  GatewaysServer.h  Makefile  NetMsgHandler.cpp  NetMsgHandler.h  NetService.cpp  NetService.h  PlayerMsgHandler.cpp  PlayerMsgHandler.h  ProcLsHandler.cpp  ProcLsHandler.h  ProcSsHandler.cpp  ProcSsHandler.h  ProcWorldHandler.cpp  ProcWorldHandler.h  WebMsgHandler.cpp  WebMsgHandler.h  fep_cfg.xml
Source/HelpTools/: CMakeLists.txt  Config.h  FileSystem.h  HelpTools_PCH.cpp  HelpTools_PCH.h  LiuhecaiMgr.cpp  LiuhecaiMgr.h  Makefile  StockCrawl.cpp  StockCrawl.h  ht_cfg.xml  ht_main.cpp
Source/Include/: AttributeOffsetC.h  BaseDefine.h  BaseProcHandler.h  CMakeLists.txt  CommanC.h  CommandS.h  CommonError.h  CommonInternal.h  CompilerDefs.h  ConfigBase.h  DataRsyncStruct.h  GatewaysServer.h  Includes.h  ItemCoolTime.h  Makefile.in  SceneBattlefiel.h  ScenesServer.h  ServerDefine.h  SessionServer.h  Single.h  WorldServer.h  csBox.h  csTurn.h  def_buff.h  def_channel.h  def_entity.h  def_resource.h  typedef.h  zFilter.h
Source/LibNetMysql/: CMakeLists.txt  DbConfig.h  DbField.cpp  DbField.h  DbIncludes.h  DbMysql.cpp  DbMysql.h  DbRecord.cpp  DbRecord.h  DbRecordSet.cpp  DbRecordSet.h  DbRequest.cpp  DbRequest.h  DbResult.cpp  DbResult.h  Makefile
Source/LibNetSocket/: CMakeLists.txt  CWebClient.cpp  CWebClient.h  CWebCommon.cpp  CWebCommon.hpp  CWebServer.cpp  CWebServer.h  Makefile  NetClient.cpp  NetClient.h  NetConfig.h  NetIOBuffer.cpp  NetIOBuffer.h  NetIncludes.h  NetServer.cpp  NetServer.h  NetSocket.cpp  NetSocket.h
Source/LibProtocol/: CMakeLists.txt  character.pb.cc  character.pb.h  character.proto  chatmsg.pb.cc  chatmsg.pb.h  chatmsg.proto  itemslots.pb.cc  itemslots.pb.h  itemslots.proto  sorlists.pb.cc  sorlists.pb.h  批量生成.bat
Source/LibSrvcore/: CMakeLists.txt  MemoryPool.cpp  MemoryPool.h  ObjPool.cpp  ResourceBuffer.cpp  ResourceBuffer.h  SrvCoreIncludes.h  SrvEngine.h  UnorderedMap.h  UnorderedSet.h  Utility.h  csCommon.h  uuid.cpp  zEncrypt.cpp  zLogger.cpp  zMisc.cpp  zMsgHandler.cpp  zNetSerivce.cpp  zRSA.cpp  zSerivceCfgMgr.cpp  zServerRegMgr.cpp  zService.cpp  zSessionMgr.cpp  zTaskTimer.cpp  zTextCVS.cpp  zTimeTick.cpp  zUUID.cpp  zXMLParser.cpp
Source/LogServer/: CMakeLists.txt  Config.h  ForSClientMsgHandler.cpp  ForSClientMsgHandler.h  ForServerMsgHandler.cpp  ForServerMsgHandler.h  LogServer_PCH.cpp  LogServer_PCH.h  Makefile  ProcServerHandler.cpp  ProcServerHandler.h  log_cfg.xml  log_main.cpp
Source/LoginServer/: Account.cpp  Account.h  AccountMgr.cpp  AccountMgr.h  AccountWx.cpp  AccountWx.h  AccountWxMgr.cpp  AccountWxMgr.h  CMakeLists.txt  GameService.cpp  GameService.h  LoginAccountMgr.cpp  LoginAccountMgr.h  LoginServer.cfg.dist  LoginServer_PCH.cpp  LoginServer_PCH.h  Makefile  NamesManager.cpp  NamesManager.h  NetMsgHandler.cpp  NetMsgHandler.h  NetService.cpp  NetService.h  ProcDpHandler.cpp  ProcDpHandler.h  ProcFepHandler.cpp  ProcFepHandler.h  ProcWorldHandler.cpp  ProcWorldHandler.h  WebMsgHandler.cpp  WebMsgHandler.h
Source/PayCenterServer/: CMakeLists.txt  GameService.cpp  GameService.h  Global.hpp  Makefile  MyHttpServer.cpp  MyHttpServer.h  NetMsgHandler.cpp  NetMsgHandler.h  ProcWorldHandler.cpp  ProcWorldHandler.h  SessionServer.h  UserEditRequestHandler.cpp  UserEditRequestHandler.h
Source/Protocol/: CMakeLists.txt
Source/ShiftServer/: CMakeLists.txt  GameService.cpp  GameService.h  Makefile  NetMsgHandler.cpp  NetMsgHandler.h
Source/WorldServer/: AdminRequestHandler.cpp  Config.h  (+54 more)
(+1530 files in other folders)
